--- a/Survey Form/index.html
+++ b/Survey Form/index.html
@@ -40,7 +40,7 @@
   <body>
     <h1>Clarusway Survey Form</h1>
     <p>Thank you for taking the time to help us improve the platform</p>
-    <form action="result.html">
+    <form action="./result/result.html">
       <label for="fname">Name</label><br /><br />
       <input
         type="text"
